@@ -2535,50 +2535,77 @@
   unit: number
 - category: Scheduler
   complexity: advanced
-  description: 'Total number of jobs dequeued.
+  description: 'The total number of jobs dequeued from all scheduler queues.
+
+    Calculating the difference between arangodb_scheduler_jobs_submitted_total
+
+    and arangodb_scheduler_jobs_dequeued_total gives the total number of
+
+    currently queued jobs.
+
+    Calculating the difference between arangodb_scheduler_jobs_dequeued_total
+
+    and arangodb_scheduler_jobs_done_total gives the number of jobs currently
+
+    being processed.
 
     '
   exposedBy:
   - coordinator
   - dbserver
   - agent
+  - single
   help: 'Total number of jobs dequeued.
 
     '
-  introducedIn: '3.6'
-  name: arangodb_scheduler_jobs_dequeued
-  type: gauge
+  introducedIn: '3.8'
+  name: arangodb_scheduler_jobs_dequeued_total
+  type: counter
   unit: number
 - category: Scheduler
   complexity: advanced
-  description: 'Total number of queue jobs done.
+  description: 'The total number of queue jobs done.
+
+    Calculating the difference between arangodb_scheduler_jobs_dequeued_total
+
+    and arangodb_scheduler_jobs_done_total gives the total number of jobs
+
+    currently being processed.
 
     '
   exposedBy:
   - coordinator
   - dbserver
   - agent
+  - single
   help: 'Total number of queue jobs done.
 
     '
-  introducedIn: '3.6'
-  name: arangodb_scheduler_jobs_done
+  introducedIn: '3.8'
+  name: arangodb_scheduler_jobs_done_total
   type: gauge
   unit: number
 - category: Scheduler
   complexity: advanced
-  description: 'Total number of jobs submitted to the queue.
+  description: 'Total number of jobs submitted to the scheduler.
+
+    Calculating the difference between arangodb_scheduler_jobs_submitted_total
+
+    and arangodb_scheduler_jobs_dequeued_total gives the total number of
+
+    currently queued jobs.
 
     '
   exposedBy:
   - coordinator
   - dbserver
   - agent
-  help: 'Total number of jobs submitted to the queue.
+  - single
+  help: 'Total number of jobs submitted to the scheduler.
 
     '
-  introducedIn: '3.6'
-  name: arangodb_scheduler_jobs_submitted
+  introducedIn: '3.8'
+  name: arangodb_scheduler_jobs_submitted_total
   type: gauge
   unit: number
 - category: Scheduler
