@@ -1,14 +1,0 @@
-name: arangodb_scheduler_jobs_dequeued
-introducedIn: "3.6"
-help: |
-  Total number of jobs dequeued.
-unit: number
-type: gauge
-category: Scheduler
-complexity: advanced
-exposedBy:
-  - coordinator
-  - dbserver
-  - agent
-description: |
-  Total number of jobs dequeued.
