@@ -1,6 +1,18 @@
 devel
 -----
 
+* The old metrics API contains the following gauges which should actually be
+  counters:
+    * arangodb_scheduler_jobs_dequeued
+    * arangodb_scheduler_jobs_submitted
+    * arangodb_scheduler_jobs_done
+  Therefore the new v2 metric api adds the following counters:
+    * arangodb_scheduler_jobs_dequeued_total
+    * arangodb_scheduler_jobs_submitted_total
+    * arangodb_scheduler_jobs_done_total
+  These counters are only visible in the new v2 metrics API and replace the old
+  metrics which are suppressed for v2.
+  
 * Fix connectionTime statistic. This statistic should provide the distribution
   of the connection lifetimes, but in previous versions the tracking was broken
   and no values were reported.
